Change the design of main view
Shadow text box: Waffle.
Round rating box: Cupcake

--- a/gelato/Biscuit.xib
+++ b/gelato/Biscuit.xib
@@ -88,7 +88,93 @@
             <connections>
                 <outletCollection property="gestureRecognizers" destination="A29-n7-wej" appends="YES" id="BOA-bk-KsO"/>
             </connections>
-            <point key="canvasLocation" x="58" y="72.5"/>
+            <point key="canvasLocation" x="60" y="61"/>
+        </view>
+        <view contentMode="scaleToFill" id="mHT-Ps-67V">
+            <rect key="frame" x="0.0" y="0.0" width="172" height="251"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RIce" translatesAutoresizingMaskIntoConstraints="NO" id="znh-YG-82d" userLabel="Image">
+                    <rect key="frame" x="1" y="0.0" width="172" height="219"/>
+                    <gestureRecognizers/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kuA-hr-bex" customClass="Waffle" customModule="gelato" customModuleProvider="target">
+                    <rect key="frame" x="6" y="180" width="162" height="71"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beetroot Sandwich" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5We-wQ-6aP" userLabel="Name">
+                            <rect key="frame" x="8" y="0.0" width="146" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 10.90" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2o-BI-phg">
+                            <rect key="frame" x="8" y="51" width="146" height="12"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fresh beetroot sandwiched in brown bread" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mwc-td-umW" userLabel="Detail">
+                            <rect key="frame" x="8" y="21" width="146" height="28"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="v2o-BI-phg" secondAttribute="bottom" constant="8" id="2MD-UA-ceP"/>
+                        <constraint firstItem="v2o-BI-phg" firstAttribute="leading" secondItem="kuA-hr-bex" secondAttribute="leading" constant="8" id="CPl-X6-Hqq"/>
+                        <constraint firstItem="5We-wQ-6aP" firstAttribute="leading" secondItem="kuA-hr-bex" secondAttribute="leading" constant="8" id="MjO-na-Fss"/>
+                        <constraint firstItem="mwc-td-umW" firstAttribute="top" secondItem="kuA-hr-bex" secondAttribute="top" constant="21" id="Zi9-ZP-QMb"/>
+                        <constraint firstAttribute="trailing" secondItem="5We-wQ-6aP" secondAttribute="trailing" constant="8" id="ced-Xy-bqC"/>
+                        <constraint firstAttribute="bottom" secondItem="mwc-td-umW" secondAttribute="bottom" constant="22" id="egc-Yv-FrM"/>
+                        <constraint firstItem="mwc-td-umW" firstAttribute="leading" secondItem="kuA-hr-bex" secondAttribute="leading" constant="8" id="gDq-KI-sSA"/>
+                        <constraint firstItem="v2o-BI-phg" firstAttribute="top" secondItem="kuA-hr-bex" secondAttribute="top" constant="51" id="kUB-Ey-sdf"/>
+                        <constraint firstAttribute="trailing" secondItem="mwc-td-umW" secondAttribute="trailing" constant="8" id="rKa-gr-fTb"/>
+                        <constraint firstAttribute="trailing" secondItem="v2o-BI-phg" secondAttribute="trailing" constant="8" id="soX-nL-bBe"/>
+                        <constraint firstItem="5We-wQ-6aP" firstAttribute="top" secondItem="kuA-hr-bex" secondAttribute="top" id="txO-n6-dml"/>
+                        <constraint firstAttribute="bottom" secondItem="5We-wQ-6aP" secondAttribute="bottom" constant="50.5" id="tzf-ag-mgw"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wnl-AV-ipg" customClass="Cupcake" customModule="gelato" customModuleProvider="target">
+                    <rect key="frame" x="136" y="173" width="27" height="27"/>
+                    <color key="backgroundColor" red="0.3538013995" green="0.90446156259999999" blue="0.78859633210000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <state key="normal" title="4.2"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="addBiscuit:" destination="-1" eventType="touchUpInside" id="NHc-hB-ZSU"/>
+                    </connections>
+                </button>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="kuA-hr-bex" secondAttribute="trailing" constant="4" id="1d7-aW-wkc"/>
+                <constraint firstItem="znh-YG-82d" firstAttribute="leading" secondItem="mHT-Ps-67V" secondAttribute="leading" constant="1" id="5M0-bb-1Vh"/>
+                <constraint firstItem="znh-YG-82d" firstAttribute="top" secondItem="mHT-Ps-67V" secondAttribute="top" id="Dkb-Za-Igf"/>
+                <constraint firstAttribute="trailing" secondItem="wnl-AV-ipg" secondAttribute="trailing" constant="9" id="GzW-Fz-5rC"/>
+                <constraint firstItem="kuA-hr-bex" firstAttribute="leading" secondItem="mHT-Ps-67V" secondAttribute="leading" constant="6" id="VIY-9v-we0"/>
+                <constraint firstAttribute="bottom" secondItem="wnl-AV-ipg" secondAttribute="bottom" constant="51" id="XtR-5N-Xd2"/>
+                <constraint firstItem="wnl-AV-ipg" firstAttribute="top" secondItem="mHT-Ps-67V" secondAttribute="top" constant="173" id="Z1K-Su-bfC"/>
+                <constraint firstAttribute="bottom" secondItem="znh-YG-82d" secondAttribute="bottom" constant="32" id="aEb-X8-Sfl"/>
+                <constraint firstItem="kuA-hr-bex" firstAttribute="top" secondItem="mHT-Ps-67V" secondAttribute="top" constant="180" id="h8p-iM-9O6"/>
+                <constraint firstAttribute="trailing" secondItem="znh-YG-82d" secondAttribute="trailing" constant="-1" id="iFR-ph-hjI"/>
+                <constraint firstItem="wnl-AV-ipg" firstAttribute="leading" secondItem="mHT-Ps-67V" secondAttribute="leading" constant="136" id="t5k-I8-Bb4"/>
+                <constraint firstAttribute="bottom" secondItem="kuA-hr-bex" secondAttribute="bottom" id="zdn-Sa-uho"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <nil key="simulatedTopBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="A29-n7-wej" appends="YES" id="aWa-af-Jcl"/>
+            </connections>
+            <point key="canvasLocation" x="352" y="61"/>
         </view>
         <tapGestureRecognizer id="A29-n7-wej">
             <connections>
@@ -99,5 +185,6 @@
     </objects>
     <resources>
         <image name="Biscuit" width="150" height="125"/>
+        <image name="RIce" width="400" height="492"/>
     </resources>
 </document>
